# logswarm

./: .firebaserc  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  firestore.indexes.json  firestore.rules  index.html  install.sh  logswarm.sh  package-lock.json  package.json  storage.rules  vite.config.js
.firebase/: hosting.ZGlzdA.cache
.githooks/: pre-commit
.github/: copilot-instructions.md
.github/workflows/: ci.yml
assets/: README.md
configs/: README.md  default.toml
dashboard/: index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
dashboard/src/: auth.ts  main.ts  permissions.ts  receiver.ts  transmitter.ts  ws.ts
dashboard/src/__tests__/: checksum.test.ts  color.test.ts  hamming.test.ts  packet.test.ts
dashboard/src/detection/: assign.ts  candidates.ts  components.ts  index.ts  segment.ts  tracker.ts
dashboard/src/protocol/: checksum.ts  color.ts  constants.ts  hamming.ts  index.ts  packet.ts
dashboard/src/renderer/: index.ts  loop.ts
docs/: DESIGN.md  USAGE.md
docs/architecture/: 01-service-registration.md  02-frontend-dashboard.md  03-input-streams.md  04-graph-neural-network.md  05-virtual-agents.md  06-backend-integration.md  07-authentication.md  README.md
src/: app.js  auth.js  config.rs  crypto-utils.js  dashboard.js  device-info.js  firebase-config.js  main.rs  server.rs  styles.css  tiling.js  verification.js  version-check.js
src/__tests__/: crypto-utils.test.js  tiling.test.js
