[package]
name = "logswarm"
version = "0.1.0"
edition = "2021"
authors = ["Manuel Weichselbaum"]
description = "Summon a swarm of programs to do your computations and daemon the full power of the localhost into your service."
license = "MIT"
readme = "README.md"

[dependencies]
serde = { version = "1", features = ["derive"] }
toml = "0.8"
